seaqt/QtCore/gen_qmimetype.h

class QMetaObject;
class QMimeType;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeType QMimeType;
QMimeType* QMimeType_new();
QMimeType* QMimeType_new2(QMimeType* other);
void QMimeType_operatorAssign(QMimeType* self, QMimeType* other);
void QMimeType_swap(QMimeType* self, QMimeType* other);
bool QMimeType_operatorEqual(const QMimeType* self, QMimeType* other);
bool QMimeType_operatorNotEqual(const QMimeType* self, QMimeType* other);
bool QMimeType_isValid(const QMimeType* self);
bool QMimeType_isDefault(const QMimeType* self);
struct miqt_string QMimeType_name(const QMimeType* self);
struct miqt_string QMimeType_comment(const QMimeType* self);
struct miqt_string QMimeType_genericIconName(const QMimeType* self);
struct miqt_string QMimeType_iconName(const QMimeType* self);
struct miqt_array /* of struct miqt_string */  QMimeType_globPatterns(const QMimeType* self);
struct miqt_array /* of struct miqt_string */  QMimeType_parentMimeTypes(const QMimeType* self);
struct miqt_array /* of struct miqt_string */  QMimeType_allAncestors(const QMimeType* self);
struct miqt_array /* of struct miqt_string */  QMimeType_aliases(const QMimeType* self);
struct miqt_array /* of struct miqt_string */  QMimeType_suffixes(const QMimeType* self);
struct miqt_string QMimeType_preferredSuffix(const QMimeType* self);
bool QMimeType_inherits(const QMimeType* self, struct miqt_string mimeTypeName);
struct miqt_string QMimeType_filterString(const QMimeType* self);
const QMetaObject* QMimeType_staticMetaObject();